# md_engine

./: .gitignore  2  Angle.cpp  Angle.h  Atom.cpp  Atom.h  AtomGrid.cpp  AtomGrid.h  AtomParams.cpp  AtomParams.h  Bond.cpp  Bond.h  Bounds.cpp  Bounds.h  BoundsGPU.h  BoundsGeneric.h  CMakeCache.txt  CMakeLists.txt  CMakeLists_midway.txt  CMakeLists_midway2.txt  DataComputeEnergy.cu  DataManager.cpp  DataManager.h  DataSet.cpp  DataSet.h  DataSetBounds.cu  DataSetBounds.h  DataSetEnergy.cu  DataSetEnergy.h  DataSetPython.cpp  DataSetTemperature.cu  DataSetTemperature.h  DeviceManager.cpp  DeviceManager.h  Dihedral.cpp  Dihedral.h  Fix.cpp  Fix.h  Fix2d.cu  Fix2d.h  (+107 more)
benchmark/: addresses.txt  benchmark-analysis-960.nvprof  benchmark-analysis.nvprof  benchmark.py  benchmarkMC.py  lc.nvprof  results.txt  resultsNewThermostat.txt  results_setpoint0.2.txt  run.sh  shout.txt  tip3p.py  tip4p.py  tooManyPrintStatements.txt
doc/: doxygen_references.bib
doc/documentation/: .buildinfo  Introduction.html  data-recording.html  device-manager.html  fix-angle-charmm.html  fix-angle-cosinedelta.html  fix-angle-harmonic.html  fix-bond-fene.html  fix-bond-harmonic.html  fix-dihedral-charmm.html  fix-dihedral-opls.html  fix-external-harmonic.html  fix-external-quartic.html  genindex.html  index.html  initialize-atoms.html  lammps-reader.html  molecule.html  python-operation.html  reading-trajectories.html  search.html  searchindex.js  ssages.html  state.html  units.html  writing-trajectories.html
doc/source/: Atoms.rst  Introduction.rst  This-is-content.rst  Units.rst  compiling.rst  conf.py  data-recording.rst  fix-Langevin.rst  fix-NVT-Andersen.rst  fix-NVT-rescale.rst  fix-NoseHoover.rst  fix-charge-DSF.rst  fix-charge-Ewald.rst  fix-nvt-andersen.rst  fix-pair-LJ.rst  fix-pair-LJFS.rst  fix-pressure-Berendsen.rst  fix-wall-LJ126.rst  fix-wall-harmonic.rst  index.rst  initialize-atoms.rst  integrator-relax.rst  molecule.rst  reading-trajectories.rst  state.rst  writing-trajectories.rst
examples/: DIO_VMD.data  PIMD_TIP4P.py  PIMD_fromRestart.py  benchmark.py  bonded_test.py  data_monomer.data  dio_out.xyz  e3b3.py  many_rigid.py  one_rigid.py  poly.in  pvd.py  pvd_restart.py  readLMPInput.py  readLMPInput_poly.py  resultsFixWallHarmonic.txt  resultsLJ.txt  rigid_system.py  rigid_test.py  simpleHarmonic.py  test_out.xyz  tip3p.py  validationFixLJ126.ipynb  wallFixLJ126Test.py  wallFixTest.py
examples/Langevin_GJF/: LGJF_Validation.py
examples/brush_test/: poly.py  poly_out.xyz  readLMPInput_poly.py
examples/e3b3_speed/: e3b3_1000.py  e3b3_16000.py  e3b3_2000.py  e3b3_4000.py  e3b3_500.py  e3b3_8000.py
examples/ethylbenzene_pvd/: ebz.data  pvd.py  pvd_test_1.xyz
examples/readLammpsInput/: readLMPInput_poly.py
examples/tip4p_2005_speed/: tip4p_2005_1000.py  tip4p_2005_16000.py  tip4p_2005_2000.py  tip4p_2005_4000.py  tip4p_2005_500.py  tip4p_2005_8000.py  tip4p_init_1000.out  tip4p_init_16000.out  tip4p_init_2000.out  tip4p_init_4000.out  tip4p_init_500.out  tip4p_init_8000.out
examples/wallFixes/: validationFixWallHarmonic.ipynb
miccom-demo/: README.md  pvd-call.py  pvd-call.swift  pvd-run.sh  pvd-swift.sh  pvd.py  pvd.swift
python/: CMakeLists.txt  DASH.cpp  Makefile  Sim.cpp  coacervate.py  copolymers.py  pvd.py  setup.py  setup.py.in
simulations/: .quartic.ex.py.swp  PIMD_TIP4P.py  gpu_sbatch.sh  quartic.ex.py
src/: Angle.cpp  Atom.cpp  Atom.h  AtomGrid.cpp  AtomGrid.h  AtomParams.cpp  AtomParams.h  Bounds.cpp  Bounds.h  BoundsGPU.cpp  BoundsGPU.h  BoundsGeneric.h  CMakeCache.txt  CMakeLists.txt  Config.h  DeviceManager.cpp  DeviceManager.h  EigenInterace.cpp  EigenInterface.cpp  EigenInterface.h  GPUData.cpp  GPUData.h  GridGPU.cu  GridGPU.h  GridGPUE3B3.cu  GridGPUE3B3.h  GridGPUe3b3.cu  GridGPUe3b3.h  Group.cpp  InitializeAtoms.cpp  InitializeAtoms.h  Interpolator.cpp  Interpolator.h  Makefile  Mod.cu  Mod.h  Molecule.cpp  Molecule.h  PythonHelpers.h  PythonOperation.cpp  (+33 more)
src/BondedForcers/: Angle.cpp  Angle.h  Bond.cpp  Bond.h  Dihedral.cpp  Dihedral.h  Improper.cpp  Improper.h
src/DataStorageUser/: DataComputeEnergy.h  DataComputer.cpp  DataComputer.h  DataComputerBounds.cu  DataComputerBounds.h  DataComputerCOMV.cu  DataComputerCOMV.h  DataComputerCV.h  DataComputerDiffusion.cu  DataComputerDiffusion.h  DataComputerDipolarCoupling.cu  DataComputerDipolarCoupling.h  DataComputerEField.cu  DataComputerEField.h  DataComputerEnergy.cu  DataComputerEnergy.h  DataComputerEnthalpy.cu  DataComputerEnthalpy.h  DataComputerHamiltonian.cu  DataComputerHamiltonian.h  DataComputerPressure.cu  DataComputerPressure.h  DataComputerRDF.cu  DataComputerRDF.h  DataComputerTemperature.cu  DataComputerTemperature.h  DataManager.cpp  DataManager.h  DataSet.cpp  DataSet.h  DataSetBounds.cu  DataSetBounds.h  DataSetEnergy.cu  DataSetTemperature.cu  DataSetTemperature.h  DataSetUser.cpp  DataSetUser.h
src/Evaluators/: AngleEvaluate.h  AngleEvaluatorCHARMM.cpp  AngleEvaluatorCHARMM.h  AngleEvaluatorCosineDelta.h  AngleEvaluatorHarmonic.h  BondEvaluate.h  BondEvaluatorFENE.h  BondEvaluatorHarmonic.h  BondEvaluatorQuartic.h  ChargeEvaluatorDSF.h  ChargeEvaluatorEwald.h  ChargeEvaluatorNone.h  DPDEvaluateIso.h  DPDEvaluatorIsothermal.h  DihedralEvaluate.h  DihedralEvaluatorCHARMM.h  DihedralEvaluatorOPLS.h  E3B_ThreeBodyOnly.h  E3B_TwoBodyOnly.h  EvaluatorE3B.cu  EvaluatorE3B.h  EvaluatorE3B3.h  EvaluatorE3B_GMX.h  EvaluatorWrapper.h  ExternalEvaluate.h  ExternalEvaluatorHarmonic.h  ExternalEvaluatorQuartic.h  ImproperEvaluate.h  ImproperEvaluatorCVFF.h  ImproperEvaluatorHarmonic.h  PairEvaluateIso.h  PairEvaluatorCHARMM.h  PairEvaluatorDipolarCoupling.h  PairEvaluatorE3B3.h  PairEvaluatorEField.h  PairEvaluatorEwald.h  PairEvaluatorLJ.cu  (+19 more)
tests/: .gitignore  README  conftest.py  test_1_particle.py  test_2_particles.py  test_NeighborList.py  test_sample.py  test_water.py
unit_test/: CMakeLists.txt  CudaMathTest.cu  GPUArrayDeviceGlobalTest.cu  GPUArrayDeviceTest.cu  RandomNumberGenerationTest.cpp  VectorTest.cpp
util_py/: LAMMPS_Reader.py  NAMD_Reader.py  domovie.py  water.py
(+178 files in other folders)
